Avoid flickering while loading widget for the first time

--- a/lhc_web/design/defaulttheme/css/widgetv2/widget.css
+++ b/lhc_web/design/defaulttheme/css/widgetv2/widget.css
@@ -1306,7 +1306,8 @@ button.material-icons-button{
 }
 
 #widget-header-content:empty{
-    background: none!important;
+    background: #fff!important;
+    min-height: 11px;
 }
 
 .text-muted-light{
